Adding cs329s acknowledgement

--- a/index.html
+++ b/index.html
@@ -235,4 +235,11 @@
     <script src="https://kit.fontawesome.com/a40ec64eb1.js" crossorigin="anonymous"></script>
 </body>
 
+<footer>
+    <div class="container sec">
+        <div class="qa">
+        <h6>Template taken from the <a href="https://stanford-cs329s.github.io/">CS329s</a> course at Stanford</h6>
+        </div>
+    </div>
+</footer>
 </html>
