--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 
-    <title>CS 329S | Home</title>
+    <title>CS 329T | Home</title>
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -41,9 +41,9 @@
                         <li>TBD (Soham)</li>
                     </ul>
                 </li>
-                <li><b>Grading</b>: one final project to build an ML application (60%), project (30%), and discussion participation on Zoom + Piazza (10%).</li>
-                <li><b>Contact</b>: Students should ask <i>all</i> course-related questions on our <a href=" http://piazza.com/stanford/winter2021/cs329s">Piazza forum</a>, where you will also find all the announcements. For external enquiries, personal matters, or in emergencies, you can email us at
-                    <i>cs329s-win2021-staff@lists.stanford.edu</i>.</li>
+                <li><b>Grading</b> four homeoworks (80%), one final report (10%), and discussion participation on Zoom + Piazza (10%).</li>
+                <li><b>Contact</b>: Students should ask <i>all</i> course-related questions on our <a href=" http://piazza.com/stanford/spring2021/cs329t">Piazza forum</a>, where you will also find all the announcements. For external enquiries, personal matters, or in emergencies, you can email us at
+                    <i>cs329t-spr2021-staff@lists.stanford.edu</i>.</li>
                 <li><b>Academic accommodations</b>: If you need an academic accommodation based on a disability, you should initiate the request with the <a href="https://oae.stanford.edu/accommodations/academic-accommodations">Office of Accessible Education (OAE)</a>.
                     The OAE will evaluate the request, recommend accommodations, and prepare a letter for faculty. Students should contact the OAE as soon as possible since timely notice is needed to coordinate accommodations.</li>
                 <li><b>Honor code</b>: Very important. See <a href="#honor-code">Honor Code</a>.</li>
