--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h2>Logistics</h2>
             <ul>
                 <!-- TODO -->
-                <li><b>Lectures</b>: Tue/Th 2:30-3:50pm (PT) online, synchronous. Class: x% recorded lectures, y% labs. Zoom links on Canvas.</li>
+                <li><b>Lectures</b>: Tue/Th 2:30-3:50pm (PT) online, synchronous. Class: x% recorded lectures, y% fireside chats, z% labs. Zoom links on Canvas.</li>
                 <li><b>Lecture videos</b>: on Canvas</li>
                 <li><b>Office hours</b> (Zoom links on Canvas):
                     <ul>
