--- a/index.html
+++ b/index.html
@@ -65,9 +65,17 @@
                 <div class="instructor">
                     <a href="https://huyenchip.com">
                         <div class="instructorphoto"><img src="images/chip.jpg"></div>
-                        <div>Chip Huyen</div>
+                        <div>John Mitchell</div>
                     </a>
                 </div>
+
+                <div class="instructor">
+                    <a href="https://huyenchip.com">
+                        <div class="instructorphoto"><img src="images/chip.jpg"></div>
+                        <div>John Mitchell</div>
+                    </a>
+                </div>
+
             </div>
             <div class="col-md-5">
                 <h3>TAs</h3>
