--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <li><b>Advisors</b>: <a href="https://pirroh.fyi">Michele Catasta</a>, <a href="https://cs.stanford.edu/~chrismre/">Christopher Ré</a></li>
         </ul> -->
         <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-3">
                 <h3>Instructor</h3>
                 <div class="instructor">
                     <a href="https://huyenchip.com">
@@ -75,7 +75,6 @@
                         <div>John Mitchell</div>
                     </a>
                 </div>
-
             </div>
             <div class="col-md-5">
                 <h3>TAs</h3>
@@ -98,21 +97,21 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md-5">
-                <h3>Advisors</h3>
-                <div class="instructor">
-                    <a href="https://pirroh.fyi">
-                        <div class="instructorphoto"><img src="images/michele.jpg"></div>
-                        <div>Michele Catasta</div>
-                    </a>
-                </div>
-                <div class="instructor">
-                    <a href="https://cs.stanford.edu/~chrismre/">
-                        <div class="instructorphoto"><img src="images/chris.jpg"></div>
-                        <div>Christopher Ré</div>
-                    </a>
-                </div>
-            </div>
+<!--            <div class="col-md-5">-->
+<!--                <h3>Advisors</h3>-->
+<!--                <div class="instructor">-->
+<!--                    <a href="https://pirroh.fyi">-->
+<!--                        <div class="instructorphoto"><img src="images/michele.jpg"></div>-->
+<!--                        <div>Michele Catasta</div>-->
+<!--                    </a>-->
+<!--                </div>-->
+<!--                <div class="instructor">-->
+<!--                    <a href="https://cs.stanford.edu/~chrismre/">-->
+<!--                        <div class="instructorphoto"><img src="images/chris.jpg"></div>-->
+<!--                        <div>Christopher Ré</div>-->
+<!--                    </a>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </div>
 
