--- a/index.html
+++ b/index.html
@@ -63,37 +63,31 @@
             <div class="col-md-3">
                 <h3>Instructor</h3>
                 <div class="instructor">
-                    <a href="https://huyenchip.com">
+                    <a href="http://theory.stanford.edu/people/jcm/">
                         <div class="instructorphoto"><img src="images/chip.jpg"></div>
                         <div>John Mitchell</div>
                     </a>
                 </div>
 
                 <div class="instructor">
-                    <a href="https://huyenchip.com">
+                    <a href="https://www.andrew.cmu.edu/user/danupam/">
                         <div class="instructorphoto"><img src="images/chip.jpg"></div>
-                        <div>John Mitchell</div>
+                        <div>Anupam Datta</div>
                     </a>
                 </div>
             </div>
             <div class="col-md-5">
                 <h3>TAs</h3>
                 <div class="instructor">
-                    <a href="https://krandiash.github.io/">
+                    <a href="https://www.linkedin.com/in/shreya-singh-a54120123/">
                         <div class="instructorphoto"><img src="images/karan.jpg"></div>
-                        <div>Karan Goel</div>
+                        <div>Shreya Singh</div>
                     </a>
                 </div>
                 <div class="instructor">
-                    <a href="https://michaeljohncooper.com/">
+                    <a href="https://www.linkedin.com/in/soham-gadgil-2729a9105/">
                         <div class="instructorphoto"><img src="images/michael.jpg"></div>
-                        <div>Michael Cooper</div>
-                    </a>
-                </div>
-                <div class="instructor">
-                    <a href="https://www.linkedin.com/in/xi-yan/">
-                        <div class="instructorphoto"><img src="images/xi.jpg"></div>
-                        <div>Xi Yan</div>
+                        <div>Soham Gadgil</div>
                     </a>
                 </div>
             </div>
