--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                 <div class="col-md-3">
                     <h3>Instructor</h3>
                     <div class="instructor">
-                        <div class="instructorphoto"><img src="images/chip.jpg"></div>
+                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
                         <div>John Mitchell</div>
                     </div>
 
                 <div class="instructor">
                     <a href="https://www.andrew.cmu.edu/user/danupam/">
-                        <div class="instructorphoto"><img src="images/chip.jpg"></div>
+                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
                         <div>Anupam Datta</div>
                     </a>
                 </div>
@@ -78,13 +78,13 @@
                 <h3>TAs</h3>
                 <div class="instructor">
                     <a href="https://www.linkedin.com/in/shreya-singh-a54120123/">
-                        <div class="instructorphoto"><img src="images/karan.jpg"></div>
+                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
                         <div>Shreya Singh</div>
                     </a>
                 </div>
                 <div class="instructor">
                     <a href="https://www.linkedin.com/in/soham-gadgil-2729a9105/">
-                        <div class="instructorphoto"><img src="images/michael.jpg"></div>
+                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
                         <div>Soham Gadgil</div>
                     </a>
                 </div>
