--- a/index.html
+++ b/index.html
@@ -60,16 +60,17 @@
             <li><b>Advisors</b>: <a href="https://pirroh.fyi">Michele Catasta</a>, <a href="https://cs.stanford.edu/~chrismre/">Christopher Ré</a></li>
         </ul> -->
         <div class="row">
-                <div class="col-md-3">
-                    <h3>Instructor</h3>
-                    <div class="instructor">
-                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
+            <div class="col-md-2">
+                <h3>Instructor</h3>
+                <div class="instructor">
+                    <a href="http://theory.stanford.edu/people/jcm/">
+                        <div class="instructorphoto"><img src="images/chip.jpg"></div>
                         <div>John Mitchell</div>
-                    </div>
-
+                    </a>
+                </div>
                 <div class="instructor">
                     <a href="https://www.andrew.cmu.edu/user/danupam/">
-                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
+                        <div class="instructorphoto"><img src="images/chip.jpg"></div>
                         <div>Anupam Datta</div>
                     </a>
                 </div>
@@ -78,16 +79,18 @@
                 <h3>TAs</h3>
                 <div class="instructor">
                     <a href="https://www.linkedin.com/in/shreya-singh-a54120123/">
-                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
+                        <div class="instructorphoto"><img src="images/karan.jpg"></div>
                         <div>Shreya Singh</div>
                     </a>
                 </div>
                 <div class="instructor">
                     <a href="https://www.linkedin.com/in/soham-gadgil-2729a9105/">
-                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
+                        <div class="instructorphoto"><img src="images/michael.jpg"></div>
                         <div>Soham Gadgil</div>
                     </a>
                 </div>
+            </div>
+        </div>
     </div>
 
     <!-- Content -->
