--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h3>Instructor</h3>
                 <div class="instructor">
                     <a href="http://theory.stanford.edu/people/jcm/">
-                        <div class="instructorphoto"><img src="images/chip.jpg"></div>
+                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
                         <div>John Mitchell</div>
                     </a>
                 </div>
