--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="instructor">
                     <a href="https://www.andrew.cmu.edu/user/danupam/">
-                        <div class="instructorphoto"><img src="images/chip.jpg"></div>
+                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
                         <div>Anupam Datta</div>
                     </a>
                 </div>
@@ -79,14 +79,35 @@
                 <h3>TAs</h3>
                 <div class="instructor">
                     <a href="https://www.linkedin.com/in/shreya-singh-a54120123/">
-                        <div class="instructorphoto"><img src="images/karan.jpg"></div>
+                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
                         <div>Shreya Singh</div>
                     </a>
                 </div>
                 <div class="instructor">
                     <a href="https://www.linkedin.com/in/soham-gadgil-2729a9105/">
-                        <div class="instructorphoto"><img src="images/michael.jpg"></div>
+                        <div class="instructorphoto"><img src="iimages/shreya_mugshot_2.jpeg"></div>
                         <div>Soham Gadgil</div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <h3>Advisors</h3>
+                <div class="instructor">
+                    <a href="https://pirroh.fyi">
+                        <div class="instructorphoto"><img src="images/michele.jpg"></div>
+                        <div>Piotr Mardziel</div>
+                    </a>
+                </div>
+                <div class="instructor">
+                    <a href="https://cs.stanford.edu/~chrismre/">
+                        <div class="instructorphoto"><img src="images/chris.jpg"></div>
+                        <div>Divya Gopinath</div>
+                    </a>
+                </div>
+                <div class="instructor">
+                    <a href="https://cs.stanford.edu/~chrismre/">
+                        <div class="instructorphoto"><img src="images/chris.jpg"></div>
+                        <div>Shayak Sen</div>
                     </a>
                 </div>
             </div>
