--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="instructor">
                     <a href="https://www.linkedin.com/in/soham-gadgil-2729a9105/">
-                        <div class="instructorphoto"><img src="iimages/shreya_mugshot_2.jpeg"></div>
+                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
                         <div>Soham Gadgil</div>
                     </a>
                 </div>
@@ -93,20 +93,20 @@
             <div class="col-md-5">
                 <h3>Advisors</h3>
                 <div class="instructor">
-                    <a href="https://pirroh.fyi">
-                        <div class="instructorphoto"><img src="images/michele.jpg"></div>
+                    <a href="https://piotr.mardziel.com/">
+                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
                         <div>Piotr Mardziel</div>
                     </a>
                 </div>
                 <div class="instructor">
-                    <a href="https://cs.stanford.edu/~chrismre/">
-                        <div class="instructorphoto"><img src="images/chris.jpg"></div>
+                    <a href="https://www.linkedin.com/in/divyagopinath/">
+                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
                         <div>Divya Gopinath</div>
                     </a>
                 </div>
                 <div class="instructor">
-                    <a href="https://cs.stanford.edu/~chrismre/">
-                        <div class="instructorphoto"><img src="images/chris.jpg"></div>
+                    <a href="https://www.linkedin.com/in/shayak-sen/">
+                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
                         <div>Shayak Sen</div>
                     </a>
                 </div>
