--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="instructor">
                     <a href="https://www.linkedin.com/in/soham-gadgil-2729a9105/">
-                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
+                        <div class="instructorphoto"><img src="images/soham.jpeg"></div>
                         <div>Soham Gadgil</div>
                     </a>
                 </div>
