--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
 
             </p>
 
-            <h3><i class="fas fa-bullseye"></i> Why machine learning systems design?</h3>
+            <h3><i class="fas fa-bullseye"></i> Why trustworthy machine learning? </h3>
             <p>
                 The attack surface of machine learning is large: training data can be poisoned, predictions manipulated using adversarial examples, models exploited to reveal sensitive information contained in training data, etc. This is in large parts due to the absence of security considerations in the design of ML algorithms. Yet, adversaries have clear incentives to target these systems. Thus, there is a need to ensure that computer systems that rely on ML are trustworthy. <br>
 
-                Fortunately, we are at a turning point where ML is still being adopted, which creates a rare opportunity to address the shortcomings of the technology before it is widely deployed. Designing secure ML requires that we have a solid understanding as to what we expect legitimate model behavior to look like.
+                Fortunately, we are at a turning point where ML is still being adopted, which creates a rare opportunity to address the shortcomings of the technology before it is widely deployed. Designing trustworthy ML requires that we have a solid understanding as to what we expect legitimate model behavior to look like.
             </p>
 
             <h3><i class="fas fa-cogs"></i> Prerequisites</h3>
