--- a/index.html
+++ b/index.html
@@ -139,9 +139,10 @@
             <h3><i class="fas fa-cogs"></i> Prerequisites</h3>
             <p>Students are expected to have the following background:</p>
             <ul>
+
                 <li>Knowledge of basic computer science principles and skills, at a level sufficient to write a reasonably non-trivial computer program (e.g., CS106B/X or equivalent).</li>
                 <li>Good understanding of machine learning algorithms (e.g. at least one of CS229, CS230, CS231N, CS224N or equivalent). </li>
-                <li>Familiar with at least one framework such as TensorFlow, PyTorch, JAX.</li>
+                <li>Familiar with at least one framework such as TensorFlow, PyTorch, Keras, scikit-learn.</li>
                 <li>Familiarity with basic probability theory (CS109 or Stat116 or equivalent is sufficient but not necessary). </li>
             </ul>
 
