--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </ul>
                 </li>
                 <li><b>Grading</b> four homeoworks (80%), one final report (10%), and discussion participation on Zoom + Piazza (10%).</li>
-                <li><b>Contact</b>: Students should ask <i>all</i> course-related questions on our <a href=" http://piazza.com/stanford/spring2021/cs329t">Piazza forum</a>, where you will also find all the announcements. For external enquiries, personal matters, or in emergencies, you can email us at
+                <li><b>Contact</b>: Students should ask <i>all</i> course-related questions on our <a href="http://piazza.com/stanford/spring2021/cs329t">Piazza forum</a>, where you will also find all the announcements. For external enquiries, personal matters, or in emergencies, you can email us at
                     <i>cs329t-spr2021-staff@lists.stanford.edu</i>.</li>
                 <li><b>Academic accommodations</b>: If you need an academic accommodation based on a disability, you should initiate the request with the <a href="https://oae.stanford.edu/accommodations/academic-accommodations">Office of Accessible Education (OAE)</a>.
                     The OAE will evaluate the request, recommend accommodations, and prepare a letter for faculty. Students should contact the OAE as soon as possible since timely notice is needed to coordinate accommodations.</li>
@@ -61,7 +61,7 @@
         </ul> -->
         <div class="row">
             <div class="col-md-2">
-                <h3>Instructor</h3>
+                <h3>Instructors</h3>
                 <div class="instructor">
                     <a href="http://theory.stanford.edu/people/jcm/">
                         <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
@@ -165,9 +165,9 @@
 
             <p>You will be able to attend all the lectures, but we won't be able to grade your homework or give advice on final projects. Our human resources are limited. There are only four of us and on top of teaching, we also have full-time jobs or are full-time students.</p>
 
-            <p>Even if you’re not auditing, you can still access all the slides, (very intensive) notes, assignments, and final project instructions. These are posted on the Syllabus page.
+            <p>Even if you’re not auditing, you can still access all the slides, notes, assignments, and final repot instructions. These are posted on the Syllabus page.
 
-            <p><b>To audit the class, please send cs329s-win2021-staff@lists.stanford.edu an email with the subject title "CS329S: Audit Request" with a few sentences introducing yourself and your relevant background.</b></p>
+            <p><b>To audit the class, please send cs329t-spr2021-staff@lists.stanford.edu an email with the subject title "CS329T: Audit Request" with a few sentences introducing yourself and your relevant background.</b></p>
 
             <p>We’ll add you as an observer on Canvas -- you need to create an account on Canvas first. You can attend all lectures scheduled there.</p>
 
@@ -179,7 +179,7 @@
 
             <h3><i class="fas fa-book"></i> Reference Text</h3>
             <p>
-                There's no textbook. The course relies on lecture notes and accompanying readings.
+                There's no textbook. The course relies on lecture slides and accompanying readings.
             </p>
         </div>
     </div>
@@ -192,9 +192,11 @@
       <div class="qqa">
         <div class="qq">Does the course count towards CS degrees?</div>
         <div class="qa">
-            For undergraduates, CS 329S can be used as a Track C requirement for the AI track. And it can be used as a general elective for the AI track. For all other tracks, they would need to petition to use the course.<br>
+            TBD
+<!--            TBD #TODO-->
+<!--            For undergraduates, CS 329S can be used as a Track C requirement for the AI track. And it can be used as a general elective for the AI track. For all other tracks, they would need to petition to use the course.<br>-->
 
-            For master's students, CS 329S can satisfy the AI Specialization Depth C requirement. It can be used as a general elective for all MS students, regardless of their specialization.
+<!--            For master's students, CS 329S can satisfy the AI Specialization Depth C requirement. It can be used as a general elective for all MS students, regardless of their specialization.-->
         </div>
       </div>
       <div class="qqa">
@@ -203,7 +205,7 @@
       </div>
       <div class="qqa">
         <div class="qq">Will the videos be made available publicly?</div>
-        <div class="qa">We won't know untile the end of the course. We're trying, but it's not solely our decision to make. We'll announce on the <a href="http://mailman.stanford.edu/mailman/listinfo/cs329s-win2021-guests">guest mailing list</a> if and when the videos are available.</div>
+        <div class="qa">We won't know until the end of the course. We're trying, but it's not solely our decision to make. We'll announce on the <a href="http://mailman.stanford.edu/mailman/listinfo/cs329t-spr2021-guests">guest mailing list</a> if and when the videos are available.</div>
       </div>
       <div class="qqa">
         <div class="qq">Is attendance mandatory?</div>
@@ -213,24 +215,24 @@
       </div>
       <div class="qqa">
         <div class="qq">What is the format of the class?</div>
-        <div class="qa">It will be lectures, tutorials, and discussion. We will often have industry experts to give us tutorials on tools for data streaming, experiment tracking, deep learning framework, monitoring, etc.</div>
+        <div class="qa">It will be lectures, labs, and fireside chats. We will often have industry experts to give us tutorials on fairness, ML explainability and privancy.</div>
       </div>
        <div class="qqa">
         <div class="qq">Do I need to know Python for the course?</div>
-        <div class="qa">Since Python has become the most popular language for machine learning, we expect most tutorials will be in Python. Python fluency isn't required, but will make your life so much easier during the course.
+        <div class="qa">Since Python has become the most popular language for machine learning, we expect most assignments will be in Python. Python fluency isn't required, but will make your life so much easier during the course.
         </div>
       </div>
       <div class="qqa">
         <div class="qq">Can I follow along from the outside?</div>
-        <div class="qa">We'd be happy if you join us! All the slides and lecture notes will be posted on this website. You can also subscribe to the <a href="http://mailman.stanford.edu/mailman/listinfo/cs329s-win2021-guests">guest mailing list</a> to get updates from the course. </div>
+        <div class="qa">We'd be happy if you join us! All the slides and lecture notes will be posted on this website. You can also subscribe to the <a href="http://mailman.stanford.edu/mailman/listinfo/cs329t-spr2021-guests">guest mailing list</a> to get updates from the course. </div>
       </div>
       <div class="qqa">
         <div class="qq">Can I work in groups for the assignments?</div>
-        <div class="qa">Yes, in groups of up to two people.</div>
+        <div class="qa">No, all assignments have to be done and submitted individually. You can however discuss with your study group, although abiding by the <a href="#honor-code">Honor Code</a>.</div>
       </div>
       <div class="qqa">
         <div class="qq">I have a question about the class. What is the best way to reach the course staff?</div>
-        <div class="qa">Please post your question on the <a href="http://piazza.com/stanford/winter2021/cs329s">course forum</a> so that other students can benefit from your questions. If you have a personal matter or emergencies, please email the staff at cs329s-win2021-staff@lists.stanford.edu.</div>
+        <div class="qa">Please post your question on the <a href="http://piazza.com/stanford/spring2021/cs329t">course forum</a> so that other students can benefit from your questions. If you have a personal matter or emergencies, please email the staff at cs329t-spr2021-staff@lists.stanford.edu.</div>
       </div>
     </div>
 
@@ -249,8 +251,8 @@
         </div>
     </div>
 </footer>
-<<<<<<< Updated upstream
-=======
+<!--<<<<<<< Updated upstream-->
+<!--=======-->
 
->>>>>>> Stashed changes
+<!--&gt;>>>>>> Stashed changes-->
 </html>
