--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                 <h3>Instructors</h3>
                 <div class="instructor">
                     <a href="http://theory.stanford.edu/people/jcm/">
-                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
+                        <div class="instructorphoto"><img src="images/john_pic.jpg"></div>
                         <div>John Mitchell</div>
                     </a>
                 </div>
                 <div class="instructor">
                     <a href="https://www.andrew.cmu.edu/user/danupam/">
-                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
+                        <div class="instructorphoto"><img src="images/anupam_pic.jpg"></div>
                         <div>Anupam Datta</div>
                     </a>
                 </div>
@@ -94,19 +94,19 @@
                 <h3>Advisors</h3>
                 <div class="instructor">
                     <a href="https://piotr.mardziel.com/">
-                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
+                        <div class="instructorphoto"><img src="images/piotr_pic.jpeg"></div>
                         <div>Piotr Mardziel</div>
                     </a>
                 </div>
                 <div class="instructor">
                     <a href="https://www.linkedin.com/in/divyagopinath/">
-                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
+                        <div class="instructorphoto"><img src="images/divya_pic.jpg"></div>
                         <div>Divya Gopinath</div>
                     </a>
                 </div>
                 <div class="instructor">
                     <a href="https://www.linkedin.com/in/shayak-sen/">
-                        <div class="instructorphoto"><img src="images/shreya_mugshot_2.jpeg"></div>
+                        <div class="instructorphoto"><img src="images/shayak_pic.jpg"></div>
                         <div>Shayak Sen</div>
                     </a>
                 </div>
