--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <li>TBD (Soham)</li>
                     </ul>
                 </li>
-                <li><b>Grading</b> four homeoworks (80%), one final report (10%), and discussion participation on Zoom + Piazza (10%).</li>
+                <li><b>Grading</b> five homeworks (80%), one final report (10%), and discussion participation on Zoom + Piazza (10%).</li>
                 <li><b>Contact</b>: Students should ask <i>all</i> course-related questions on our <a href="http://piazza.com/stanford/spring2021/cs329t">Piazza forum</a>, where you will also find all the announcements. For external enquiries, personal matters, or in emergencies, you can email us at
                     <i>cs329t-spr2021-staff@lists.stanford.edu</i>.</li>
                 <li><b>Academic accommodations</b>: If you need an academic accommodation based on a disability, you should initiate the request with the <a href="https://oae.stanford.edu/accommodations/academic-accommodations">Office of Accessible Education (OAE)</a>.
@@ -100,7 +100,7 @@
                 </div>
                 <div class="instructor">
                     <a href="https://www.linkedin.com/in/divyagopinath/">
-                        <div class="instructorphoto"><img src="images/divya_pic.jpg"></div>
+                        <div class="instructorphoto"><img src="images/divya_square.png"></div>
                         <div>Divya Gopinath</div>
                     </a>
                 </div>
