--- a/syllabus.html
+++ b/syllabus.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 
-    <title>CS 329S | Syllabus</title>
+    <title>CS 329T | Syllabus</title>
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -24,7 +24,7 @@
     <div class="container sec" id="schedule" style="margin-top:-20px"><br>
         <h2><i class="far fa-calendar-alt"> </i> Schedule & syllabus</h2>
         <p>
-            The lecture slides, notes, tutorials, and assignments will be posted online here as the course progresses.<br>
+            The lecture slides, notes, labs, and assignments will be posted online here as the course progresses. All the pre-recorded lectures would be uploaded Monday every week on Canvas<br>
             Lecture times are <b>2:30-3:50pm PST</b>. All deadlines are at <b>11:59pm PST</b>.
         </p>
         <p>
@@ -41,24 +41,46 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Mon Jan 11</td>
-                    <td>Understanding machine learning production</td>
+                    <td>Mon Mar 29</td>
+                    <td>Week 1 Presentation topics: <br>
+                        <ol>
+                            Course overview<br>
+                            Background: Deep learning<br>
+                            Background: Vision <br>
+                            Background: Keras <br>
+                        </ol>
+
+                    </td>
                     <td>
-                        <a href="https://docs.google.com/document/d/1VuofeF5okBATz1F7HRQmOgi5Jc4bmUiHMYjRqwF-29s/edit?usp=sharing">Note</a><br>
-                        <a href="https://docs.google.com/presentation/d/1XKBXoLW3ED3FcvDRK3jfQeIlLCK2QTnsoZeopR6ziRQ/edit?usp=sharing">Slides</a>
+<!--                        TODO: Add links-->
+                        Note<br>
+                       Slides
+                    </td>
+                    <td>Pre-recorded lecture</td>
+                </tr>
+
+                <tr>
+                    <td>Tue Mar 30</td>
+                    <td>Orientation, overview Fireside chat, course QA and introduce final project
+                    </td>
+                    <td>
+                        Note<br>
+                        Slides
                     </td>
                     <td>Lecture</td>
                 </tr>
 
                 <tr>
-                    <td>Wed Jan 13</td>
-                    <td>Intro to machine learning systems design</td>
-                    <td>
-                        <a href="https://docs.google.com/document/d/15vCMf7SbDuxST9Q-rWtx8o7qHJQN2pE5urCDFTYI1zs/edit?usp=sharing">Note</a><br>
-                        <a href="https://docs.google.com/presentation/d/1WNN6GS-BM62BUfyJD3lbgCYE25eT0Ugo2SbSsSevDL4/edit?usp=sharing">Slides</a>
+                    <td>Thu Apr 1</td>
+                    <td>Troubleshooting Homework 0, Intro to Homework 1.
                     </td>
-                    <td>Lecture</td>
+                    <td>
+                        Note<br>
+                        Slides
+                    </td>
+                    <td>Lab<br>Homework 1 released</td>
                 </tr>
+
 
                 <tr bgcolor="#dddddd">
                     <td>Mon Jan 18</td>
