--- a/syllabus.html
+++ b/syllabus.html
@@ -40,6 +40,13 @@
                 </tr>
             </thead>
             <tbody>
+                <tr bgcolor="#dddddd">
+                    <td></td>
+                    <td></td>
+                    <td>Part 1: Background</td>
+                    <td></td>
+                </tr>
+
                 <tr>
                     <td>Mon Mar 29</td>
                     <td>Week 1 Presentation topics: <br>
@@ -72,7 +79,7 @@
 
                 <tr>
                     <td>Thu Apr 1</td>
-                    <td>Troubleshooting Homework 0, Intro to Homework 1.
+                    <td>Troubleshooting Homework 0 <br> Intro to Homework 1
                     </td>
                     <td>
                         Note<br>
