--- a/syllabus.html
+++ b/syllabus.html
@@ -24,7 +24,7 @@
     <div class="container sec" id="schedule" style="margin-top:-20px"><br>
         <h2><i class="far fa-calendar-alt"> </i> Schedule & syllabus</h2>
         <p>
-            The lecture slides, notes, labs, and assignments will be posted online here as the course progresses. All the pre-recorded lectures would be uploaded Monday every week on Canvas<br>
+            The lecture slides, notes, labs, and assignments will be posted online here as the course progresses. All the pre-recorded lectures would be uploaded Monday every week on Canvas.<br>
             Lecture times are <b>2:30-3:50pm PST</b>. All deadlines are at <b>11:59pm PST</b>.
         </p>
         <p>
@@ -43,7 +43,7 @@
                 <tr bgcolor="#dddddd">
                     <td></td>
                     <td></td>
-                    <td>Part 1: Background</td>
+                    <td>Part I: Background (Week 1) </td>
                     <td></td>
                 </tr>
 
@@ -74,7 +74,7 @@
                         Note<br>
                         Slides
                     </td>
-                    <td>Lecture</td>
+                    <td>Fireside chat Lecture</td>
                 </tr>
 
                 <tr>
@@ -82,7 +82,6 @@
                     <td>Troubleshooting Homework 0 <br> Intro to Homework 1
                     </td>
                     <td>
-                        Note<br>
                         Slides
                     </td>
                     <td>Lab<br>Homework 1 released</td>
@@ -90,30 +89,57 @@
 
 
                 <tr bgcolor="#dddddd">
-                    <td>Mon Jan 18</td>
-                    <td>No class</td>
-                    <td>Martin Luther King, Jr. Day</td>
+                    <td></td>
+                    <td></td>
+                    <td>Part II: Explanations (Weeks 2 and 3) </td>
                     <td></td>
                 </tr>
 
                 <tr>
-                    <td>Wed Jan 20</td>
-                    <td>Data engineering</td>
-                    <td>
-                        <a href="https://docs.google.com/presentation/d/18oX1JpMJrUBjcrhenxijpyYB3ppZ9rSN9Qrimgp-qBM/edit?usp=sharing">Slides</a><br>
-                        <a href="https://docs.google.com/document/d/1b9iuZiDEGVLHyMmnf6w2y1aN6yWQhAyqk3GHlpI9q6M/edit?usp=sharing">Note</a>
+                    <td>Mon Apr 5</td>
+                    <td>Week 2 Presentation topics: <br>
+                        <ol>
+                            Explanations overview<br>
+                            Local explanations<br>
+                            Input importance and Shapley values
+                        </ol>
                     </td>
-                    <td>Lecture</td>
+                    <td>
+<!--                        TODO: Add links-->
+                        Note<br>
+                        Slides<br>
+                        <a href="https://finale.seas.harvard.edu/files/finale/files/an_evaluation_of_the_human-interpretability_of_explanation.pdf">An Evaluation of the Human-Interpretability of Explanation</a><br>
+                        <a href="https://dl.acm.org/doi/pdf/10.1145/2939672.2939778">Why Should I Trust You?": Explaining the Predictions of Any Classifier</a><br>
+                        <a href="https://arxiv.org/pdf/1703.01365.pdf">Axiomatic Attribution for Deep Networks</a>
+
+                    </td>
+                    <td>Pre-recorded lecture</td>
                 </tr>
 
                 <tr>
-                    <td>Mon Jan 25</td>
-                    <td>Model development</td>
-                    <td>
-                        <a href="https://docs.google.com/presentation/d/1a6rOvT0_LrRK7zsuVnpk9HFoDwgr9JtVY0oAx34_W8I/edit?usp=sharing">Slides</a><br>
-                        <a href="https://docs.google.com/document/d/1-cEgSn_8g2IaxHV0OsCJWiUrNGgChCtPDrS2nuGafSA/edit?usp=sharing">Note</a>
+                    <td>Tue Apr 6</td>
+                    <td>Shapley values in explanations: SHAP & QII
+
                     </td>
-                    <td>Lecture</td>
+                    <td>
+                        Note<br>
+                        Slides<br>
+                        <a href="https://www.andrew.cmu.edu/user/danupam/datta-sen-zick-oakland16.pdf">Algorithmic Transparency via Quantitative Input Influence: Theory and Experiments with Learning Systems</a><br>
+                        <a href="https://proceedings.neurips.cc/paper/2017/file/8a20a8621978632d76c43dfd28b67767-Paper.pdf">A Unified Approach to Interpreting Model Predictions</a><
+
+
+                    </td>
+                    <td>Fireside chat Lecture</td>
+                </tr>
+
+                <tr>
+                    <td>Thu Apr 8</td>
+                    <td>Intro to Homework 2
+                    </td>
+                    <td>
+                        Slides
+                    </td>
+                    <td>Lab<br>Homework 1 due</td>
                 </tr>
 
                 <tr bgcolor="#F7F6F1">
