--- a/syllabus.html
+++ b/syllabus.html
@@ -84,7 +84,16 @@
                     <td>
                         Slides
                     </td>
-                    <td>Lab<br>Homework 1 released</td>
+                    <td>Lab<br>Homework 1 released: br>
+                    <ol>
+                        Description: Homework 1 is designed to make sure you are comfortable with ML fundamentals that will be needed in this course.
+                        If you are struggling with parts of this assignment, consider whether you meet the prerequisites. <br>
+                        Learning outcomes: Background checkpoint <br>
+                        Content: XGboost, Python, Sci-kit learn, Tensorflow for vision
+
+                    </ol>
+
+                    </td>
                 </tr>
 
 
@@ -180,7 +189,7 @@
 
                 <tr>
                     <td>Thu Apr 15</td>
-                    <td>Homework 2 QA <br>TBD
+                    <td>Homework 2 Q/A <br>TBD
                     </td>
                     <td>
                         Slides
@@ -188,6 +197,52 @@
                     <td>Lab
                 </tr>
 
+
+                <tr>
+                    <td>Mon Apr 12</td>
+                    <td>Week 3 Presentation topics: <br>
+                        <ol>
+                            Vision attributions (saliency maps, integrated gradients, layerwise relevant propagation, etc.) <br>
+                            Evaluations for attributions<br>
+                            Training point influence
+                        </ol>
+                    </td>
+                    <td>
+<!--                        TODO: Add links-->
+                        Note<br>
+                        Slides<br>
+                        <a href="https://arxiv.org/pdf/2002.07985.pdf">Interpreting Interpretations: Organizing Attribution Methods by Criteria</a><br>
+                        <a href="https://papers.nips.cc/paper/2018/file/8a7129b8f3edd95b7d969dfc2c8e9d9d-Paper.pdf">Representer point selection for DNN</a><br>
+                        <a href="https://arxiv.org/pdf/1703.04730.pdf">Understanding Black-box Predictions via Influence Functions</a>
+
+                    </td>
+                    <td>Pre-recorded lecture</td>
+                </tr>
+
+                <tr>
+                    <td>Tue Apr 13</td>
+                    <td>More deep learning introspection methods
+                    </td>
+
+                    <td>
+                        Note<br>
+                        Slides<br>
+                        <a href="https://arxiv.org/pdf/1902.03129.pdf">Towards Automatic Concept-based Explanations</a><br>
+                        <a href="https://arxiv.org/abs/1802.03788">Influence-Directed Explanations for CNNs</a>
+
+                    </td>
+                    <td>Fireside chat Lecture</td>
+                </tr>
+
+                <tr>
+                    <td>Thu Apr 15</td>
+                    <td>Homework 2 QA <br>TBD
+                    </td>
+                    <td>
+                        Slides
+                    </td>
+                    <td>Lab
+                </tr>
 
 
 
