--- a/syllabus.html
+++ b/syllabus.html
@@ -84,7 +84,7 @@
                     <td>
                         Slides
                     </td>
-                    <td>Lab<br>Homework 1 released: br>
+                    <td>Lab<br>Homework 1 released: <br>
                     <ol>
                         Description: Homework 1 is designed to make sure you are comfortable with ML fundamentals that will be needed in this course.
                         If you are struggling with parts of this assignment, consider whether you meet the prerequisites. <br>
