--- a/syllabus.html
+++ b/syllabus.html
@@ -84,14 +84,14 @@
                     <td>
                         Slides
                     </td>
-                    <td>Lab<br>Homework 1 released: <br>
-                    <ol>
-                        Description: Homework 1 is designed to make sure you are comfortable with ML fundamentals that will be needed in this course.
-                        If you are struggling with parts of this assignment, consider whether you meet the prerequisites. <br>
-                        Learning outcomes: Background checkpoint <br>
-                        Content: XGboost, Python, Sci-kit learn, Tensorflow for vision
+                    <td>Lab<br>Homework 1 released: <br><br>
+<!--                    <ol>-->
+                    Description: Homework 1 is designed to make sure you are comfortable with ML fundamentals that will be needed in this course.
+                    If you are struggling with parts of this assignment, consider whether you meet the prerequisites. <br><br>
+                    Learning outcomes: Background checkpoint <br><br>
+                    Content: XGboost, Python, Sci-kit learn, Tensorflow for vision
 
-                    </ol>
+<!--                    </ol>-->
 
                     </td>
                 </tr>
