--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
 
             </p>
 
-            <h3><i class="fas fa-bullseye"></i> Why trustworthy machine learning? </h3>
-            <p>
-                The attack surface of machine learning is large: training data can be poisoned, predictions manipulated using adversarial examples, models exploited to reveal sensitive information contained in training data, etc. This is in large parts due to the absence of security considerations in the design of ML algorithms. Yet, adversaries have clear incentives to target these systems. Thus, there is a need to ensure that computer systems that rely on ML are trustworthy. <br><br>
+<!--            <h3><i class="fas fa-bullseye"></i> Why trustworthy machine learning? </h3>-->
+<!--            <p>-->
+<!--                The attack surface of machine learning is large: training data can be poisoned, predictions manipulated using adversarial examples, models exploited to reveal sensitive information contained in training data, etc. This is in large parts due to the absence of security considerations in the design of ML algorithms. Yet, adversaries have clear incentives to target these systems. Thus, there is a need to ensure that computer systems that rely on ML are trustworthy. <br><br>-->
 
-                Fortunately, we are at a turning point where ML is still being adopted, which creates a rare opportunity to address the shortcomings of the technology before it is widely deployed. Designing trustworthy ML requires that we have a solid understanding as to what we expect legitimate model behavior to look like.
-            </p>
+<!--                Fortunately, we are at a turning point where ML is still being adopted, which creates a rare opportunity to address the shortcomings of the technology before it is widely deployed. Designing trustworthy ML requires that we have a solid understanding as to what we expect legitimate model behavior to look like.-->
+<!--            </p>-->
 
             <h3><i class="fas fa-cogs"></i> Prerequisites</h3>
             <p>Students are expected to have the following background:</p>
@@ -187,12 +187,12 @@
         <h2>FAQ</h2>
         <div class="qqa">
         <div class="qq">Is this the first time the course is offered?</div>
-        <div class="qa">Yes. We're all a little nervous, and we're trying our best to ensure the quality of the lectures, but here and there things might not be as polished as other courses. Your feedback will be greatly appreciated.</div>
+        <div class="qa"> Yes. We will be building on a <a href="https://course.ece.cmu.edu/~ece739/2019-spring/index.html">course</a> created and taught by Datta at CMU. </div>
       </div>
       <div class="qqa">
         <div class="qq">Does the course count towards CS degrees?</div>
         <div class="qa">
-            TBD
+            Yes, this course can satisfy Area D: Computing and Society breadth requirement (for MSCS)
 <!--            TBD #TODO-->
 <!--            For undergraduates, CS 329S can be used as a Track C requirement for the AI track. And it can be used as a general elective for the AI track. For all other tracks, they would need to petition to use the course.<br>-->
 
