--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <!-- TODO -->
                 <li><b>Lectures</b>: Tue/Th 2:30-3:50pm (PT) online, synchronous. Class: 33% recorded lectures, 33% fireside chats, 33% labs. Zoom links on Canvas.</li>
                 <li><b>Lecture videos</b>: on Canvas</li>
+                <li><b>Piazza</b>: <a href="http://piazza.com/stanford/spring2021/cs329t">Add yourself here on Piazza</a> </li> Access code: CS329TSPR21
                 <li><b>Office hours</b> (Zoom links on Canvas):
                     <ul>
                          <!-- TODO -->
@@ -41,7 +42,7 @@
                         <li>TBD (Soham)</li>
                     </ul>
                 </li>
-                <li><b>Grading</b> five homeworks (80%), one final report (10%), and discussion participation on Zoom + Piazza (10%).</li>
+                <li><b>Grading</b>: five homeworks (90%) and discussion participation on Zoom + Piazza (10%).</li>
                 <li><b>Contact</b>: Students should ask <i>all</i> course-related questions on our <a href="http://piazza.com/stanford/spring2021/cs329t">Piazza forum</a>, where you will also find all the announcements. For external enquiries, personal matters, or in emergencies, you can email us at
                     <i>cs329t-spr2021-staff@lists.stanford.edu</i>.</li>
                 <li><b>Academic accommodations</b>: If you need an academic accommodation based on a disability, you should initiate the request with the <a href="https://oae.stanford.edu/accommodations/academic-accommodations">Office of Accessible Education (OAE)</a>.
