--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <!-- TODO -->
                 <li><b>Lectures</b>: Tue/Th 2:30-3:50pm (PT) online, synchronous. Class: 33% recorded lectures, 33% fireside chats, 33% labs. Zoom links on Canvas.</li>
                 <li><b>Lecture videos</b>: on Canvas</li>
-                <li><b>Piazza</b>: <a href="http://piazza.com/stanford/spring2021/cs329t">Add yourself here on Piazza</a> </li> Access code: CS329TSPR21
+                <li><b>Piazza</b>: <a href="http://piazza.com/stanford/spring2021/cs329t">Add yourself here on Piazza</a> Access code: CS329TSPR21 </li>
                 <li><b>Office hours</b> (Zoom links on Canvas):
                     <ul>
                          <!-- TODO -->
