--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <!-- TODO -->
                 <li><b>Lectures</b>: Tue/Th 2:30-3:50pm (PT) online, synchronous. Class: 33% recorded lectures, 33% fireside chats, 33% labs. Zoom links on Canvas.</li>
                 <li><b>Lecture videos</b>: on Canvas</li>
-                <li><b>Piazza</b>: <a href="http://piazza.com/stanford/spring2021/cs329t">Add yourself here on Piazza</a> Access code: CS329TSPR21 </li>
+                <li><b>Piazza</b>: <a href="http://piazza.com/stanford/spring2021/cs329t">Add yourself here on Piazza</a> </li>
                 <li><b>Office hours</b> (Zoom links on Canvas):
                     <ul>
                          <!-- TODO -->
@@ -63,18 +63,21 @@
         <div class="row">
             <div class="col-md-2">
                 <h3>Instructors</h3>
-                <div class="instructor">
-                    <a href="http://theory.stanford.edu/people/jcm/">
-                        <div class="instructorphoto"><img src="images/john_pic.jpg"></div>
-                        <div>John Mitchell</div>
-                    </a>
-                </div>
+
                 <div class="instructor">
                     <a href="https://www.andrew.cmu.edu/user/danupam/">
                         <div class="instructorphoto"><img src="images/anupam_pic.jpg"></div>
                         <div>Anupam Datta</div>
                     </a>
                 </div>
+
+                <div class="instructor">
+                    <a href="http://theory.stanford.edu/people/jcm/">
+                        <div class="instructorphoto"><img src="images/john_pic.jpg"></div>
+                        <div>John Mitchell</div>
+                    </a>
+                </div>
+
             </div>
             <div class="col-md-5">
                 <h3>TAs</h3>
